tests/auto/corelib/xml/qxmlstream/XML-Test-Suite/xmlconf/ibm/invalid/P32/ibm32i03.dtd
<!ATTLIST animal class NMTOKEN #IMPLIED>